gcc/testsuite/g++.dg/cpp0x/auto24.C
// PR c++/48599
// { dg-do compile { target c++11 } }

int v[1];
auto (*p)[1] = &v;		// { dg-error "array of .auto" }
